k8s-rewrite/charts/web-app-stack/aplb/service.yaml
# APLB Service
apiVersion: v1
kind: Service
metadata:
  name: aplb
  namespace: website-stack
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  selector:
    app: aplb
