k8s-rewrite/charts/web-app-stack/aplb/ingress.yaml
# APLB Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aplb-ingress
  namespace: website-stack
spec:
  rules:
    - host: aplb.branconet.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aplb
                port:
                  number: 80
